# vivarium

./: .gitignore  README.md  lid.dxf
.github/workflows/: ci.yml
automation/: .gitignore  automation.kicad_prl  automation.kicad_pro  automation.kicad_sch
terrarium_assistant/: Cargo.toml
terrarium_assistant/src/: fixtures.rs  lib.rs  main.rs
terrarium_assistant/src/domain/: mod.rs
vivarium_assistant/: Cargo.toml  Makefile  example_config.toml  wrapper-arm-linux-gnueabihf.sh
vivarium_assistant/.cargo/: config.toml
vivarium_assistant/.github/workflows/: ci.yml
vivarium_assistant/src/: config.rs  errors.rs  lib.rs  main.rs
vivarium_assistant/src/adapters/: config.rs  metrics.rs  mod.rs  raspberrypi.rs
vivarium_assistant/src/domain/: mod.rs  outputs.rs  sensors.rs
vivarium_assistant/src/ports/: http.rs
vivarium_assistant/tools/: check_repository_unchanged.sh
