[package]
name = "vivarium_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
tokio = { version = "1.41.0", features = ["full"] }
chrono = "0.4.38"
rppal = "0.19.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"

[features]
not_raspberry_pi = []

[[bin]]
name = "aht20"
path = "src/bin/aht20.rs"