[package]
name = "vivarium_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
tokio = { version = "1.41.0", features = ["full"] }
chrono = "0.4.38"
rppal = "0.19.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
prometheus = "0.13.4"
axum = "0.7.9"
log = "0.4.22"
env_logger = "0.11.5"

[features]
not_raspberry_pi = []

[[bin]]
name = "aht20"
path = "src/bin/aht20.rs"

[[bin]]
name = "hcsr04"
path = "src/bin/hcsr04.rs"
